[package]
name = "kash-cli"
description = "Kash CLI library"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
include = [
    "src/**/*.rs",
    "src/**/*.txt",
    "src/**/*.css",
    "Cargo.toml",
    "Cargo.lock",
]

[features]
legacy-rpc = ["kash-wallet-core/legacy-rpc"]
default = []

[lib]
name = "kash_cli_lib"
crate-type = ["cdylib", "lib"]

[dependencies]
async-trait.workspace = true
borsh.workspace = true
cfg-if.workspace = true
convert_case.workspace = true
dashmap.workspace = true
downcast.workspace = true
faster-hex.workspace = true
futures.workspace = true
js-sys.workspace = true
kash-addresses.workspace = true
kash-bip32.workspace = true
kash-consensus-core.workspace = true
kash-core.workspace = true
kash-daemon.workspace = true
kash-metrics-core.workspace = true
kash-rpc-core.workspace = true
kash-utils.workspace = true
kash-wallet-core.workspace = true
kash-wrpc-client.workspace = true
nw-sys.workspace = true
pad.workspace = true
regex.workspace = true
separator.workspace = true
serde_json.workspace = true
serde.workspace = true
textwrap.workspace = true
thiserror.workspace = true
wasm-bindgen.workspace = true
workflow-core.workspace = true
workflow-dom.workspace = true
workflow-log.workspace = true
workflow-node.workspace = true
workflow-nw.workspace = true
workflow-store.workspace = true
workflow-terminal.workspace = true
workflow-wasm.workspace = true

[dependencies.web-sys]
workspace = true
features = [
    'console',
    'Document',
    'Window',
    'Node',
    'Element',
    'HtmlElement',
    'DomTokenList',
    # 'HtmlElement',
    # 'CustomEvent',
    # 'MouseEvent'
]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio.workspace = true
