[package]
name = "kash-consensus"
description = "Kash consensus library"
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true

[dependencies]
arc-swap.workspace = true
async-channel.workspace = true
bincode.workspace = true
crossbeam-channel.workspace = true
faster-hex.workspace = true
futures-util.workspace = true
indexmap.workspace = true
itertools.workspace = true
kash-consensus-core.workspace = true
kash-consensus-notify.workspace = true
kash-consensusmanager.workspace = true
kash-core.workspace = true
kash-database.workspace = true
kash-hashes.workspace = true
kash-math.workspace = true
kash-merkle.workspace = true
kash-muhash.workspace = true
kash-notify.workspace = true
kash-pow.workspace = true
kash-txscript.workspace = true
kash-utils.workspace = true
log.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
rayon.workspace = true
rocksdb.workspace = true
secp256k1.workspace = true
serde.workspace = true
smallvec.workspace = true
thiserror.workspace = true
tokio.workspace = true

rand = { workspace = true, features = ["small_rng"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }

[dev-dependencies]
criterion.workspace = true
serde_json.workspace = true
flate2.workspace = true
rand_distr.workspace = true
kash-txscript-errors.workspace = true

[[bench]]
name = "hash_benchmarks"
harness = false

[features]
html_reports = []
devnet-prealloc = ["kash-consensus-core/devnet-prealloc"]
