[package]
name = "kash-mining"
description = "Kash mining"
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true

[dependencies]
kash-addresses.workspace = true
kash-consensus-core.workspace = true
kash-consensusmanager.workspace = true
kash-core.workspace = true
kash-database.workspace = true
kash-hashes.workspace = true
kash-mining-errors.workspace = true
kash-muhash.workspace = true
kash-txscript.workspace = true
kash-utils.workspace = true
kash-utxoindex.workspace = true
kash-oracle.workspace = true
futures-util.workspace = true
itertools.workspace = true
log.workspace = true
parking_lot.workspace = true
rand.workspace = true
serde.workspace = true
smallvec.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = [ "rt-multi-thread", "macros", "signal" ] }

[dev-dependencies]
kash-txscript.workspace = true
criterion.workspace = true
secp256k1.workspace = true

[[bench]]
name = "bench"
harness = false
