[package]
name = "kash-notify"
description = "Kash notification subsystem"
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true

[dependencies]
async-channel.workspace = true
async-trait.workspace = true
borsh.workspace = true
derive_more.workspace = true
futures-util.workspace = true
futures.workspace = true
itertools.workspace = true
kash-addresses.workspace = true
kash-consensus-core.workspace = true
kash-core.workspace = true
kash-txscript-errors.workspace = true
kash-txscript.workspace = true
kash-utils.workspace = true
log.workspace = true
parking_lot.workspace = true
paste.workspace = true
rand.workspace = true
serde.workspace = true
thiserror.workspace = true
triggered.workspace = true
workflow-core.workspace = true
workflow-log.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
