[package]
name = "kash-oracle"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
include.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = { workspace = true, features = ["rc"] }
hex = "0.4.3"
rand = "0.8.5"
thiserror = "1.0.56"
openssl = "0.10"
serde = { version = "1.0.193", features = ["derive"] }
reqwest = { version = "0.11.23", features = ["blocking", "json"] }
wasm-bindgen = { version = "=0.2.87", features = ["serde-serialize"] }
serde-wasm-bindgen.workspace = true
