[package]
name = "rothschild"
description = "Kash Transaction Generator"
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true

[dependencies]
kash-core.workspace = true
kash-consensus-core.workspace = true
kash-grpc-client.workspace = true
kash-rpc-core.workspace = true
kash-addresses.workspace = true
kash-txscript.workspace = true
kash-utils.workspace = true

clap.workspace = true
faster-hex.workspace = true
itertools.workspace = true
log.workspace = true
secp256k1 = { workspace = true, features = ["global-context", "rand-std"] }
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread"] }
