[package]
name = "simpa"
description = "Kash Network Simulator"
publish = false
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true

[dependencies]
kash-alloc.workspace = true            # This changes the global allocator for all of the next dependencies so should be kept first
kash-consensus-core.workspace = true
kash-consensus-notify.workspace = true
kash-consensus.workspace = true
kash-core.workspace = true
kash-database.workspace = true
kash-hashes.workspace = true
kash-perf-monitor.workspace = true
kash-utils.workspace = true

async-channel.workspace = true
clap.workspace = true
dhat = { workspace = true, optional = true }
futures-util.workspace = true
futures.workspace = true
indexmap.workspace = true
itertools.workspace = true
log.workspace = true
num_cpus.workspace = true
rand_distr.workspace = true
rand.workspace = true
rayon.workspace = true
secp256k1.workspace = true
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread"] }

[features]
heap = ["dhat", "kash-alloc/heap"]
