[package]
name = "kash-wasm"
description = "KASH WASM bindings"
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
# wasm-pack requires this value to be a string
# (it can not be derived from the workspace)
license = "MIT/Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys.workspace = true
kash-addresses.workspace = true
kash-consensus-core.workspace = true
kash-consensus-wasm.workspace = true
kash-core.workspace = true
kash-math.workspace = true
kash-pow.workspace = true
kash-rpc-core.workspace = true
kash-utils.workspace = true
kash-wallet-core.workspace = true
kash-wrpc-client.workspace = true
num.workspace = true
wasm-bindgen.workspace = true
workflow-log.workspace = true

[features] 
wallet = [] 
full = ["wallet"] 
default = [] 

[package.metadata.docs.rs]
targets = ["wasm32-unknown-unknown"]

[package.metadata.emanate.wasm]
targets = [
    { target = "nodejs", out-dir = "nodejs/kash" },
    { target = "web", out-dir = "web/kash" }
]
folder = "setup"
