[package]
name = "kash-connectionmanager"
description = "Kash connection manager"
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true

[dependencies]
duration-string.workspace = true
futures-util.workspace = true
itertools.workspace = true
kash-addressmanager.workspace = true
kash-core.workspace = true
kash-p2p-lib.workspace = true
kash-utils.workspace = true
log.workspace = true
parking_lot.workspace = true
rand.workspace = true
tokio.workspace = true