[package]
name = "kash-consensusmanager"
description = "Kash consensus library"
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true

[dependencies]
duration-string.workspace = true
futures-util.workspace = true
futures.workspace = true
itertools.workspace = true
kash-consensus-core.workspace = true
kash-consensus-notify.workspace = true
kash-core.workspace = true
kash-utils.workspace = true
log.workspace = true
parking_lot.workspace = true
rand.workspace = true
tokio.workspace = true
