[package]
name = "kash-consensus-core"
description = "Kash consensus core"
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
borsh.workspace = true
cfg-if.workspace = true
faster-hex.workspace = true
futures-util.workspace = true
getrandom.workspace = true
itertools.workspace = true
js-sys.workspace = true
kash-addresses.workspace = true
kash-core.workspace = true
kash-hashes.workspace = true
kash-math.workspace = true
kash-merkle.workspace = true
kash-muhash.workspace = true
kash-oracle.workspace = true
kash-txscript-errors.workspace = true
kash-utils.workspace = true
rand.workspace = true
secp256k1.workspace = true
serde_json.workspace = true
serde-wasm-bindgen.workspace = true
serde.workspace = true
smallvec.workspace = true
thiserror.workspace = true
wasm-bindgen.workspace = true
workflow-core.workspace = true
workflow-log.workspace = true
workflow-wasm.workspace = true
serde_cbor = "0.11.2"

[dev-dependencies]
criterion.workspace = true
bincode.workspace = true
wasm-bindgen-test.workspace = true
web-sys.workspace = true

[[bench]]
name = "serde_benchmark"
harness = false

[features]
devnet-prealloc = []
