[package]
name = "kash-consensus-notify"
description = "Kash consensus notifier"
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true

[dependencies]
async-channel.workspace = true
cfg-if.workspace = true
derive_more.workspace = true
futures.workspace = true
kash-consensus-core.workspace = true
kash-core.workspace = true
kash-hashes.workspace = true
kash-notify.workspace = true
kash-utils.workspace = true
log.workspace = true
paste.workspace = true
thiserror.workspace = true
triggered.workspace = true
