[package]
name = "kash-pow"
description = "Kash proof-of-work"
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true


[dependencies]
js-sys.workspace = true
kash-consensus-core.workspace = true
kash-hashes.workspace = true
kash-math.workspace = true
kash-utils.workspace = true
wasm-bindgen.workspace = true
workflow-wasm.workspace = true

[dev-dependencies]
criterion.workspace = true


[[bench]]
name = "bench"
harness = false