[package]
name = "kash-consensus-wasm"
description = "Kash consensus core WASM bindings"
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true

[dependencies]
kash-consensus-core.workspace = true
kash-addresses.workspace = true
kash-txscript.workspace = true
kash-hashes.workspace = true
kash-utils.workspace = true

wasm-bindgen.workspace = true
serde.workspace = true
serde_json.workspace = true
serde-wasm-bindgen.workspace = true
thiserror.workspace = true
js-sys.workspace = true
secp256k1.workspace = true
faster-hex.workspace = true
rand.workspace = true

workflow-wasm.workspace = true
workflow-log.workspace = true
