[package]
name = "kash-muhash"
description = "Kash Muhash library"
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true

[dependencies]
kash-hashes.workspace = true
kash-math.workspace = true
rand_chacha.workspace = true
serde.workspace = true

# For the exhuative tests, should only be enabled with release
rayon = { workspace = true, optional = true }

[dev-dependencies]
criterion.workspace = true
rand.workspace = true

[[bench]]
name = "bench"
harness = false

