[package]
name = "kash-txscript"
description = "Kash txscript engine library"
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true

[dependencies]
blake2b_simd.workspace = true
borsh.workspace = true
indexmap.workspace = true
itertools.workspace = true
kash-addresses.workspace = true
kash-consensus-core.workspace = true
kash-hashes.workspace = true
kash-txscript-errors.workspace = true
log.workspace = true
parking_lot.workspace = true
rand.workspace = true
secp256k1.workspace = true
serde.workspace = true
sha2.workspace = true
smallvec.workspace = true
thiserror.workspace = true
wasm-bindgen.workspace = true

[dev-dependencies]
criterion.workspace = true
smallvec.workspace = true
hex.workspace = true
serde_json.workspace = true

[[bench]]
name = "bench"
harness = false
