[package]
name = "kash-index-core"
description = "Kash index core"
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true

[dependencies]
async-channel.workspace = true
async-trait.workspace = true
derive_more.workspace = true
futures.workspace = true
kash-consensus-core.workspace = true
kash-hashes.workspace = true
kash-notify.workspace = true
kash-utils.workspace = true
log.workspace = true
paste.workspace = true
serde.workspace = true
thiserror.workspace = true
triggered.workspace = true

[dev-dependencies]
# parking_lot.workspace = true
# tokio = { workspace = true, features = ["rt", "macros"] }
# rand = {workspace = true,  features = [ "small_rng" ]}