[package]
name = "kash-index-processor"
description = "Kash index processor"
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true

[dependencies]
kash-consensus-core.workspace = true
kash-consensus-notify.workspace = true
kash-consensusmanager.workspace = true
kash-core.workspace = true
kash-database.workspace = true
kash-hashes.workspace = true
kash-index-core.workspace = true
kash-notify.workspace = true
kash-utils.workspace = true
kash-utxoindex.workspace = true

async-channel.workspace = true
async-trait.workspace = true
derive_more.workspace = true
futures.workspace = true
log.workspace = true
paste.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = [ "rt-multi-thread", "macros", "signal" ]}
triggered.workspace = true

[dev-dependencies]
kash-consensus.workspace = true
parking_lot.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }
rand = {workspace = true,  features = [ "small_rng" ]}