[package]
name = "kash-utxoindex"
description = "Kash UTXO index"
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true

[dependencies]
futures.workspace = true
kash-consensus-core.workspace = true
kash-consensusmanager.workspace = true
kash-core.workspace = true
kash-database.workspace = true
kash-hashes.workspace = true
kash-index-core.workspace = true
kash-utils.workspace = true
log.workspace = true
parking_lot.workspace = true
rocksdb.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
kash-consensus.workspace = true
rand = { workspace = true, features = ["small_rng"] }
