[package]
name = "kash-metrics-core"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
include.workspace = true

[dependencies]
async-trait.workspace = true
borsh.workspace = true
futures.workspace = true
kash-core.workspace = true
kash-rpc-core.workspace = true
separator.workspace = true
serde.workspace = true
thiserror.workspace = true
workflow-core.workspace = true
workflow-log.workspace = true
