[package]
name = "kash-perf-monitor"
description = "Kash process performance monitoring tools"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
include.workspace = true

[dependencies]
kash-core.workspace = true
log.workspace = true
portable-atomic.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt", "macros", "time"] }
workflow-perf-monitor.workspace = true
