[package]
name = "kash-mining-errors"
description = "Kash mining error definitions"
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror.workspace = true
kash-consensus-core.workspace = true
