[package]
name = "kash-p2p-flows"
description = "Kash p2p flows"
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true

[dependencies]
kash-core.workspace = true
kash-consensus-core.workspace = true
kash-consensus-notify.workspace = true
kash-p2p-lib.workspace = true
kash-utils.workspace = true
kash-utils-tower.workspace = true
kash-hashes.workspace = true
kash-muhash.workspace = true
kash-connectionmanager.workspace = true
kash-addressmanager.workspace = true
kash-consensusmanager.workspace = true
kash-mining.workspace = true
kash-notify.workspace = true

async-trait.workspace = true
futures = { workspace = true, features = ["alloc"] }
indexmap.workspace = true
itertools.workspace = true
log.workspace = true
parking_lot.workspace = true
rand.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal"] }
tokio-stream = { workspace = true, features = ["net"] }
uuid = { workspace = true, features = ["v4", "fast-rng"] }
chrono.workspace = true
