[package]
name = "kash-rpc-core"
description = "Kash RPC core"
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true

[dependencies]
kash-addresses.workspace = true
kash-consensus-core.workspace = true
kash-consensus-notify.workspace = true
kash-consensus-wasm.workspace = true
kash-core.workspace = true
kash-hashes.workspace = true
kash-index-core.workspace = true
kash-math.workspace = true
kash-mining-errors.workspace = true
kash-notify.workspace = true
kash-txscript.workspace = true
kash-utils.workspace = true

async-channel.workspace = true
async-trait.workspace = true
borsh.workspace = true
derive_more.workspace = true
downcast.workspace = true
faster-hex.workspace = true
log.workspace = true
paste.workspace = true
serde-wasm-bindgen.workspace = true
serde.workspace = true
smallvec.workspace = true
thiserror.workspace = true
uuid.workspace = true
wasm-bindgen.workspace = true
workflow-core.workspace = true
workflow-wasm.workspace = true

[dev-dependencies]
serde_json.workspace = true
