[package]
name = "kash-rpc-service"
description = "Kash RPC service"
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true

[dependencies]
kash-addresses.workspace = true
kash-consensus-core.workspace = true
kash-consensus-notify.workspace = true
kash-consensus.workspace = true
kash-consensusmanager.workspace = true
kash-core.workspace = true
kash-hashes.workspace = true
kash-index-core.workspace = true
kash-math.workspace = true
kash-mining.workspace = true
kash-notify.workspace = true
kash-p2p-flows.workspace = true
kash-p2p-lib.workspace = true
kash-perf-monitor.workspace = true
kash-rpc-core.workspace = true
kash-txscript.workspace = true
kash-utils.workspace = true
kash-utils-tower.workspace = true
kash-utxoindex.workspace = true

async-trait.workspace = true
log.workspace = true
tokio.workspace = true
workflow-rpc.workspace = true