[package]
name = "kash-testing-integration"
publish = false
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true

[dependencies]
kash-alloc.workspace = true            # This changes the global allocator for all of the next dependencies so should be kept first
kash-addresses.workspace = true
kash-consensus-core.workspace = true
kash-consensus-notify.workspace = true
kash-consensus.workspace = true
kash-consensusmanager.workspace = true
kash-core.workspace = true
kash-grpc-client.workspace = true
kash-grpc-core.workspace = true
kash-hashes.workspace = true
kash-oracle.workspace = true
kash-math.workspace = true
kash-merkle.workspace = true
kash-notify.workspace = true
kash-pow.workspace = true
kash-rpc-core.workspace = true
kashd.workspace = true

async-channel.workspace = true
bincode.workspace = true
crossbeam-channel.workspace = true
faster-hex.workspace = true
flate2.workspace = true
futures-util.workspace = true
indexmap.workspace = true
itertools.workspace = true
kash-bip32.workspace = true
kash-database.workspace = true
kash-index-processor.workspace = true
kash-muhash.workspace = true
kash-txscript.workspace = true
kash-utils.workspace = true
kash-utxoindex.workspace = true
kash-wrpc-server.workspace = true
log.workspace = true
parking_lot.workspace = true
rand_distr.workspace = true
rand.workspace = true
rayon.workspace = true
rocksdb.workspace = true
secp256k1.workspace = true
serde_json.workspace = true
serde.workspace = true
smallvec.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
criterion.workspace = true
rand = { workspace = true, features = ["small_rng"] }
tokio = { workspace = true, features = ["rt", "macros"] }
kash-txscript-errors.workspace = true

[features]
html_reports = []
devnet-prealloc = ["kashd/devnet-prealloc"]
